crates/ars-components/src/utility/action_group/snapshots/ars_components__utility__action_group__tests__action_group_item_selected_single.snap
---
source: crates/ars-components/src/utility/action_group/mod.rs
expression: "snapshot_attrs(&single.connect(&|_| {}).item_attrs(&key(\"copy\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-key",
            ),
            String(
                "copy",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "action-group",
            ),
        ),
        (
            Data(
                "ars-selected",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "selected",
            ),
        ),
        (
            Aria(
                Pressed,
            ),
            String(
                "true",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
