crates/ars-components/src/utility/action_group/snapshots/ars_components__utility__action_group__tests__action_group_overflow_trigger_default_label.snap
---
source: crates/ars-components/src/utility/action_group/mod.rs
expression: "snapshot_attrs(&default.connect(&|_| {}).overflow_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "overflow-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "action-group",
            ),
        ),
        (
            Aria(
                Expanded,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                HasPopup,
            ),
            String(
                "menu",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "More actions",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
