crates/ars-components/src/utility/action_group/snapshots/ars_components__utility__action_group__tests__action_group_root_styling_hooks.snap
---
source: crates/ars-components/src/utility/action_group/mod.rs
expression: "snapshot_attrs(&styled.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-density",
            ),
            String(
                "compact",
            ),
        ),
        (
            Data(
                "ars-justified",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-label-behavior",
            ),
            String(
                "collapse",
            ),
        ),
        (
            Data(
                "ars-overflow-mode",
            ),
            String(
                "menu",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "action-group",
            ),
        ),
        (
            Data(
                "ars-variant",
            ),
            String(
                "outlined",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Document actions",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "horizontal",
            ),
        ),
        (
            Id,
            String(
                "actions",
            ),
        ),
        (
            Role,
            String(
                "toolbar",
            ),
        ),
    ],
    styles: [],
}
